# Console_Client_Server_Application

./: .clang-format  .gitignore  CMakeLists.txt
src/Admin/: CMakeLists.txt  Logger.h  admin.cpp  admin.h  admin_process.cpp  network_data.h  network_ser.cpp  network_ser.h
src/Client_Server/: CMakeLists.txt  IPC.h  Logger.h  client_network.cpp  client_network.h  client_pipe.cpp  client_pipe.h  main.cpp  network_data.h  network_ser.cpp  network_ser.h  pipe.h  server_network.cpp  server_network.h  server_pipe.cpp  server_pipe.h
